--- a/src/main/resources/credentials/credentials.properties.sample
+++ b/src/main/resources/credentials/credentials.properties.sample
@@ -1,4 +1,4 @@
 # Fill in your AWS Access Key ID and Secret Access Key
 # http://aws.amazon.com/security-credentials
-accessKeyId:<Your Access Key ID> 
+accessKey:<Your Access Key ID> 
 secretKey:<Your Secret Key>
