--- a/pom.xml
+++ b/pom.xml
@@ -17,6 +17,11 @@
 			<artifactId>aws-java-sdk</artifactId>
 			<version>1.11.329</version>
 		</dependency>
+		<dependency>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-configuration2</artifactId>
+			<version>2.0</version>
+		</dependency>
 	</dependencies>
 
 </project>
